<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>widget_plane_tickets</class>
 <widget class="QWidget" name="widget_plane_tickets">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>589</width>
    <height>539</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Plane tickets</string>
  </property>
  <widget class="QPushButton" name="button_remove_plane_ticket">
   <property name="geometry">
    <rect>
     <x>461</x>
     <y>350</y>
     <width>121</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text">
    <string>remove plane ticket</string>
   </property>
  </widget>
  <widget class="QWidget" name="layoutWidget">
   <property name="geometry">
    <rect>
     <x>280</x>
     <y>440</y>
     <width>190</width>
     <height>24</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout_2">
    <item>
     <widget class="QLabel" name="label_2">
      <property name="text">
       <string>Number of installments:</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QComboBox" name="combo_number_of_installments">
      <item>
       <property name="text">
        <string>1</string>
       </property>
      </item>
      <item>
       <property name="text">
        <string>2</string>
       </property>
      </item>
      <item>
       <property name="text">
        <string>4</string>
       </property>
      </item>
      <item>
       <property name="text">
        <string>10</string>
       </property>
      </item>
      <item>
       <property name="text">
        <string>12</string>
       </property>
      </item>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QWidget" name="verticalLayoutWidget">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>20</y>
     <width>441</width>
     <height>121</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="vlayout_table_content"/>
  </widget>
  <widget class="QWidget" name="layoutWidget_2">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>440</y>
     <width>212</width>
     <height>24</height>
    </rect>
   </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
       <string>credit card:</string>
      </property>
     </widget>
    </item>
    <item>
     <widget class="QLineEdit" name="line_edit_credit_card">
      <property name="echoMode">
       <enum>QLineEdit::Password</enum>
      </property>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QPushButton" name="button_choose_plane_ticket">
   <property name="geometry">
    <rect>
     <x>461</x>
     <y>71</y>
     <width>121</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text">
    <string>choose plane ticket</string>
   </property>
  </widget>
  <widget class="QWidget" name="verticalLayoutWidget_2">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>310</y>
     <width>441</width>
     <height>101</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="vlayout_chosen_plane_ticket"/>
  </widget>
  <widget class="QWidget" name="verticalLayoutWidget_3">
   <property name="geometry">
    <rect>
     <x>20</x>
     <y>160</y>
     <width>160</width>
     <height>121</height>
    </rect>
   </property>
   <layout class="QVBoxLayout" name="vlayout_guest_ages"/>
  </widget>
  <widget class="QPushButton" name="button_buy">
   <property name="geometry">
    <rect>
     <x>220</x>
     <y>500</y>
     <width>93</width>
     <height>28</height>
    </rect>
   </property>
   <property name="text">
    <string>buy</string>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
